Introduction/Table of Contents

--- a/Telco-Customer-Churn.ipynb
+++ b/Telco-Customer-Churn.ipynb
@@ -1,47 +1,122 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "966a66bd",
+   "cell_type": "markdown",
+   "id": "4e081c38",
    "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "execution": {
-     "iopub.execute_input": "2023-05-27T09:35:24.449618Z",
-     "iopub.status.busy": "2023-05-27T09:35:24.448799Z",
-     "iopub.status.idle": "2023-05-27T09:35:24.455082Z",
-     "shell.execute_reply": "2023-05-27T09:35:24.453903Z"
-    },
     "papermill": {
-     "duration": 0.016496,
-     "end_time": "2023-05-27T09:35:24.461247",
+     "duration": 0.00212,
+     "end_time": "2023-05-27T10:08:49.345996",
      "exception": false,
-     "start_time": "2023-05-27T09:35:24.444751",
+     "start_time": "2023-05-27T10:08:49.343876",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
    "source": [
-    "#Telco Customer Churn"
+    "<a id=\"1.2\"></a>\n",
+    "<div style=\"padding:20px;\n",
+    "            color:white;\n",
+    "            margin:10;\n",
+    "            font-size:170%;\n",
+    "            text-align:left;\n",
+    "            display:fill;\n",
+    "            border-radius:5px;\n",
+    "            background-color:#64A36F;\n",
+    "            overflow:hidden;\n",
+    "            font-weight:700;\n",
+    "            font-weight:bold;\"><span style='color:#CDA63A'>|</span> Introduction</div>\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8134258b",
+   "cell_type": "markdown",
+   "id": "c0cf3cb6",
    "metadata": {
     "papermill": {
-     "duration": 0.001644,
-     "end_time": "2023-05-27T09:35:24.465555",
+     "duration": 0.001329,
+     "end_time": "2023-05-27T10:08:49.349114",
      "exception": false,
-     "start_time": "2023-05-27T09:35:24.463911",
+     "start_time": "2023-05-27T10:08:49.347785",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "source": [
+    "Telco companies face a critical need to acquire new customers while minimizing customer churn, which incurs significant costs for the company. The primary challenge lies in accurately predicting whether individual customers will churn and identifying the primary factors contributing to churn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f859a3c7",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001262,
+     "end_time": "2023-05-27T10:08:49.351858",
+     "exception": false,
+     "start_time": "2023-05-27T10:08:49.350596",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "<a id=\"1.2\"></a>\n",
+    "<div style=\"padding:20px;\n",
+    "            color:white;\n",
+    "            margin:10;\n",
+    "            font-size:170%;\n",
+    "            text-align:left;\n",
+    "            display:fill;\n",
+    "            border-radius:5px;\n",
+    "            background-color:#64A36F;\n",
+    "            overflow:hidden;\n",
+    "            font-weight:700\"><span style='color:#CDA63A'>|</span> Table of Contents</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "824500af",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001296,
+     "end_time": "2023-05-27T10:08:49.354607",
+     "exception": false,
+     "start_time": "2023-05-27T10:08:49.353311",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "<a id=\"toc\"></a>\n",
+    "- [1. Set-up](#1)\n",
+    "    - [1.1 Import Libraries](#1.1)\n",
+    "    - [1.2 Import Data](#1.2)\n",
+    "    - [1.3 Data Set Characteristics](#1.3)\n",
+    "    - [1.4 Dataset Attributes](#1.4)\n",
+    "- [2. Exploring data set](#2)\n",
+    "    - [2.1 Quick overview](#2.1)\n",
+    "- [3. Data preprocessing](#3)\n",
+    "    - [3.1 Dealing with missing values](#3.1)\n",
+    "    - [3.2 Dealin with error: could not convert string to float:](#3.2)\n",
+    "    - [3.3 Dealing with duplicated values](#3.3)\n",
+    "    - [3.4 Creating numerical and categorical lists](#3.4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d99e40",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001221,
+     "end_time": "2023-05-27T10:08:49.357275",
+     "exception": false,
+     "start_time": "2023-05-27T10:08:49.356054",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": []
   }
  ],
@@ -65,14 +140,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 15.238931,
-   "end_time": "2023-05-27T09:35:25.391601",
+   "duration": 9.146803,
+   "end_time": "2023-05-27T10:08:50.080008",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-27T09:35:10.152670",
+   "start_time": "2023-05-27T10:08:40.933205",
    "version": "2.4.0"
   }
  },
